Sun Jan  5 2003  Vitezslav Samel <samel@mail.cz>
	* configure.ac:
	newer versions (>= 2.54) of autoconf need AC_PROG_EGREP to prevent
	lockup when running configure; this change require autoconf-2.54
	at least to properly build joe from CVS

Wed Jan  1 2003  Vitezslav Samel <samel@mail.cz>
	* rc.c:
	eliminate "expr, expr" to make sources more readable;
	change "magic number" to the sizeof()

Wed Jan  1 2003  Vitezslav Samel <samel@mail.cz>
	* b.c:
	pisbow() should match the beginning of file and piseow() should match
	the end of file

Sat Dec  7 2002  Vitezslav Samel <samel@mail.cz>
	* kbd.c:
	don't expect all archs have "char == signed char" by default

Sat Dec  7 2002  Vitezslav Samel <samel@mail.cz>
	* blocks.c, vfile.c:
	64bit arch fixes: don't expect pointer fits into int (now we assume
	it fits into unsigned long)

Sat Dec  7 2002  Vitezslav Samel <samel@mail.cz>
	* types.h, usearch.c:
	rename restrict() and restrict member of struct search to make
	joe compile under HPUX with HP C compiler

Mon Aug  5 2002  Vitezslav Samel <samel@mail.cz>
	*** SECURITY ***
	* ufile.c:
	drop suid and sgid bits (if set) when creating backup files

Sat Jul 27 2002  Vitezslav Samel <samel@mail.cz>
	* jmacsrc.in, jpicorc.in, jstarrc.in:
	use .@7 terminfo entry for "End" key

Wed Jun 26 2002  Vitezslav Samel <samel@mail.cz>
	* bw.c, rc.c, rc.h, w.c:
	rename getcontext() to kmap_getcontext() to prevent conflict with glibc
	(from Debian patches)

Mon Jun 17 2002  Vitezslav Samel <samel@mail.cz>
	* ublock.c:
	insert braces to make if() block evident

Sun Jun  9 2002  Vitezslav Samel <samel@mail.cz>
	* b.c, bw.c, cmd.c, hash.c, kbd.c, macro.c, main.c, rc.c, regex.c,
	termcap.c, tty.c, ublock.c, umath.c, vfile.c:
	change "expr, expr" to "expr; expr" where appropriate to make sources
	more readable (should have no impact on code) (take 2)

Sun Jun  9 2002  Vitezslav Samel <samel@mail.cz>
	* hash.c, hash.h:
	move hnext() definition into hash.c
