@@ -171,7 +171,7 @@ void vseek PARAMS(());
  * int vgetc(VFILE *);
  *
  * Get next character / Get previous character functions.
- * They return MAXINT for end of file / beginning of file.
+ * They return NO_MORE_DATA for end of file / beginning of file.
  */
 
 int _vgetc PARAMS(());
@@ -285,14 +285,14 @@ void vwrite PARAMS(());
 
 /* int rc(VFILE *vfile,long addr);
  *
- * Read character.  Returns MAXINT if past end of file.
+ * Read character.  Returns NO_MORE_DATA if past end of file.
  */
 
 int _rc();
 
 #define rc(v,a) \
 	( \
-	  (a)>=vsize(v) ? MAXINT : \
+	  (a)>=vsize(v) ? NO_MORE_DATA : \
 	    ( \
 	      (v)->addr==((a)&~(PGSIZE-1)) ? \
 	       (v)->vpage1[(a)&(PGSIZE-1)] \
